--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,8 +19,8 @@ header {
 }
 
 h1 {
-  margin: 90px 0 0 0;
-  font-size: 60px;
+  margin: 60px 0 0 0;
+  font-size: 100px;
   color: var(--dkgreen);
   font-family: Rancho, sans-serif;
 }
@@ -38,7 +38,6 @@ h1 {
 }
 
 /* Nav bar formatting */
-
 nav ul {
   display: flex;
   position: fixed;
@@ -66,12 +65,12 @@ nav a {
 
 /* Main body formatting */
 main {
-  margin: 10px 40px 10px 40px;
+  margin: 0 40px 10px 40px;
 }
 
 h2 {
   text-align: center;
-  font-size: 30px;
+  font-size: 60px;
   margin: 15px 0;
   font-family: Oswald, sans-serif;
 }
@@ -91,7 +90,7 @@ section {
 /* Work section formatting */
 h3 {
   text-align: center;
-  font-size: 22px;
+  font-size: 30px;
 }
 
 #work {
@@ -109,37 +108,34 @@ h3 {
 #current figure {
   margin: 10px;
   background-color: blanchedalmond;
-  border-radius: 15px;
+  border-radius: 50px;
   padding: 7px;
 }
 
 #current img {
-  height: 200px;
+  height: 210px;
 }
 
+/* Break between flex items */
 .break {
   width: 100%;
   height: 10px;
 }
 
 #current p {
-  border-bottom: dotted 1px;
   padding: 0 0 5px 0;
-  font-size: 15px;
+  font-size: 9px;
 }
 
 #past {
   display: flex;
   flex-wrap: wrap;
-  align-items: center;
   justify-content: center;
 }
 
+/* First image in past work needs to be larger per acceptance criteria */
 #past figure:first-of-type img {
   height: 400px;
-}
-#past figure:first-of-type img:hover {
-  opacity: 1;
 }
 
 #past img {
@@ -176,10 +172,12 @@ h3 {
   list-style: none;
   text-align: center;
   flex-wrap: wrap;
+  padding: 0;
 }
 
 #contact li {
   padding: 10px;
+  width: 250px;
   background-color: blanchedalmond;
   border-radius: 15px;
   margin: 5px;
@@ -207,4 +205,44 @@ footer {
 footer p {
   padding: 15px 0 0 0;
   color: blanchedalmond;
+}
+
+/* Media query - small screen width */
+@media only screen and (max-width: 768px) {
+  h1 {
+    font-size: 70px;
+    margin: 80px 0 0 0;
+  }
+  nav li {
+    font-size: 20px;
+    margin: 5px;
+  }
+  h2 {
+    font-size: 30px;
+  }
+  h3 {
+    font-size: 20px;
+  }
+  #current img {
+    height: 150px;
+  }
+  article p {
+    font-size: 16px;
+  }
+  #current p {
+    font-size: 7px;
+  }
+}
+
+@media only screen and (max-width: 445.5px) {
+  h1 {
+    font-size: 50px;
+    margin: 90px 0 0 0;
+  }
+}
+
+@media only screen and (max-width: 352px) {
+  h1 {
+    margin: 65px 0 0 0;
+  }
 }
